--- a/is_legendary.ipynb
+++ b/is_legendary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_fig(fig, filename):\n",
-    "    if not os.path.exists(\"./plot_images\"):\n",
-    "        os.mkdir(\"./images\")\n",
-    "    fig.write_image(\"./plot_images/\" + filename + \".png\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +265,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +286,7 @@
        "(801, 40)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +666,7 @@
        "[8 rows x 33 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +695,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +825,7 @@
        "5                    1.1             88.1     NaN       19.0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +849,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +994,7 @@
        "5                    Lizardoリザード  Charmeleon   fire    None  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2198,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2259,7 @@
        "715              Noivern  flying  dragon"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2290,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3788,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3804,7 +3792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3819,7 +3807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3833,7 +3821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3842,7 +3830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -5333,7 +5321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -5342,7 +5330,7 @@
        "['type1', 'type2']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5364,7 +5352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5373,7 +5361,7 @@
        "35"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5386,7 +5374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -5412,7 +5400,7 @@
        " 'against_water']"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5424,7 +5412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -6742,7 +6730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6752,7 +6740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6762,7 +6750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6772,7 +6760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -6796,7 +6784,7 @@
        " 'against_dark_ghost']"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6807,7 +6795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6816,7 +6804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -13552,7 +13540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -13686,7 +13674,7 @@
        "646                    700     Kyurem"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13698,7 +13686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -13716,7 +13704,7 @@
        " 'weight_kg'}"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13727,7 +13715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -14648,7 +14636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -21285,7 +21273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -21370,7 +21358,7 @@
        "max    999.900000   14.500000"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21388,7 +21376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -21416,7 +21404,7 @@
        "Name: name, Length: 98, dtype: object"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21435,7 +21423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21444,7 +21432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -21563,7 +21551,7 @@
        "[70 rows x 2 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21583,7 +21571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -24084,7 +24072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -29775,8 +29763,7 @@
            1,
            "#f0f921"
           ]
-         ],
-         "showscale": false
+         ]
         },
         "legend": {
          "tracegroupgap": 0
@@ -30640,7 +30627,6 @@
     "                    xaxis_title=\"Egg Steps\",\n",
     "                    yaxis_title=\"Weight (kg)\",\n",
     "                    showlegend=False)\n",
-    "fig.update_coloraxes(showscale=False)\n",
     "fig.show()"
    ]
   },
@@ -30653,7 +30639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -30715,7 +30701,7 @@
        "773               Silvally           30720"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30743,7 +30729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -30837,7 +30823,7 @@
        "max        140.000000    255.000000       1.640000e+06"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30848,7 +30834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -37414,7 +37400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -43987,7 +43973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43998,7 +43984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -46148,7 +46134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46184,7 +46170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -46193,7 +46179,7 @@
        "BayesianGaussianMixture(n_components=15, n_init=10, random_state=42)"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46207,7 +46193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -46217,7 +46203,7 @@
        "       0.05, 0.26, 0.04, 0.  ])"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46228,7 +46214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -46237,7 +46223,7 @@
        "True"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46248,7 +46234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46259,7 +46245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -46268,7 +46254,7 @@
        "array([8], dtype=int64)"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46279,7 +46265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -46288,7 +46274,7 @@
        "array([[0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46306,7 +46292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -46317,7 +46303,7 @@
        "Name: is_legendary, dtype: float64"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46328,7 +46314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46339,7 +46325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46348,7 +46334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46358,8 +46344,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Real Legendary Pokémon"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
